--- a/index.html
+++ b/index.html
@@ -1,154 +1,151 @@
 <!DOCTYPE html>
 <html lang="th">
 <head>
-    <meta charset="UTF-8">
-    <title>Tesla Dash v6 Final</title>
-    <script src="https://cdn.tailwindcss.com"></script>
-    <style>
-        @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap');
-        body { font-family: 'Inter', sans-serif; background-color: #000; color: #fff; height: 100vh; overflow: hidden; margin: 0; }
-        .dashboard-card { background: #111; border: 1px solid #222; border-radius: 1.25rem; overflow: hidden; }
-        .emergency-item { background: #1a1111; border: 1px solid #331a1a; display: block; text-decoration: none; color: white; margin-bottom: 6px; }
-        ::-webkit-scrollbar { display: none; }
-        iframe { border: 0; }
-    </style>
+<meta charset="UTF-8">
+<title>Tesla Dash v9 – Model 3 Live</title>
+<script src="https://cdn.tailwindcss.com"></script>
+
+<style>
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap');
+
+:root{
+ --bg:#000;--card:#0b0b0b;--border:#1f1f1f;
+ --text:#e5e7eb;--muted:#6b7280;
+ --danger:#ef4444;--accent:#3b82f6;
+}
+body{
+ background:var(--bg);color:var(--text);
+ font-family:Inter,system-ui;height:100vh;overflow:hidden;
+}
+.card{background:var(--card);border:1px solid var(--border);border-radius:1rem}
+::-webkit-scrollbar{display:none}
+iframe{border:0}
+</style>
 </head>
-<body class="p-4 flex flex-col gap-4">
 
-    <header class="h-16 flex justify-between items-center px-4">
-        <div class="flex items-baseline gap-4">
-            <div id="clock" class="text-6xl font-bold tracking-tighter">00:00</div>
-            <div id="date" class="text-lg text-gray-500 font-medium border-l border-gray-800 pl-4">Loading...</div>
-        </div>
-        <div class="flex gap-10 text-right">
-            <div>
-                <p class="text-[10px] text-gray-500 uppercase font-bold tracking-widest">PM 2.5 Index</p>
-                <p id="pm25-val" class="text-2xl font-bold text-yellow-500">--</p>
-            </div>
-            <div class="border-l border-gray-800 pl-10 text-green-500">
-                <p class="text-[10px] text-gray-500 uppercase font-bold tracking-widest">Model 3 RWD</p>
-                <p class="text-xl font-bold">STABLE?</p>
-            </div>
-        </div>
-    </header>
+<body class="p-3 flex flex-col gap-3">
 
-    <main class="flex-1 grid grid-cols-10 gap-4 overflow-hidden">
-        
-        <section class="col-span-3 flex flex-col gap-4">
-            <div class="h-1/3 dashboard-card p-4 flex flex-col justify-between">
-                <div class="flex justify-between items-center">
-                    <div>
-                        <p id="temp-main" class="text-5xl font-bold">--°</p>
-                        <p id="weather-desc" class="text-xs text-gray-400 capitalize">Loading...</p>
-                    </div>
-                    <span id="weather-icon" class="text-6xl">🌤️</span>
-                </div>
-                <div id="forecast-row" class="flex justify-between border-t border-gray-800 pt-3 text-center text-[10px] text-gray-500 uppercase">
-                    <p class="w-full">กำลังเชื่อมต่อสภาพอากาศ...</p>
-                </div>
-            </div>
-            <div class="flex-1 dashboard-card relative">
-                <iframe width="100%" height="100%" src="https://www.windy.com/weather-radar?radar,13.750,100.517,8&detailLat=13.750&detailLon=100.517&width=600&height=450" frameborder="0"></iframe>
-                <div class="absolute top-2 left-2 bg-black/80 px-2 py-1 rounded text-[10px] text-blue-400 font-bold uppercase">Rain Radar (Windy)</div>
-            </div>
-        </section>
+<!-- STATUS BAR -->
+<header class="h-14 flex justify-between items-center px-4 card">
+  <div class="flex items-baseline gap-4">
+    <div id="clock" class="text-5xl font-bold">00:00</div>
+    <div id="loc" class="text-xs text-[color:var(--muted)]">GPS: --</div>
+  </div>
+  <div class="text-right text-xs text-green-500 font-semibold">
+    Tesla Model 3 • LIVE
+  </div>
+</header>
 
-        <section class="col-span-3 flex flex-col gap-4">
-            <div class="h-1/3 dashboard-card p-4 flex flex-col justify-center items-center">
-                <p class="text-[10px] text-gray-500 font-bold uppercase mb-1">Nearest Supercharger</p>
-                <p class="text-5xl font-bold text-green-500">8 <span class="text-xl text-gray-700">/ 12</span></p>
-                <p class="text-sm text-gray-300 mt-1 italic font-medium">Central Rama 9</p>
-            </div>
-            <div class="flex-1 dashboard-card p-4 flex flex-col gap-1 overflow-y-auto">
-                <p class="text-[10px] text-red-500 font-bold uppercase text-center mb-2 tracking-widest">Emergency Calls</p>
-                <a href="tel:1669" class="emergency-item p-3 rounded-xl flex justify-between items-center"><div><p class="text-sm font-bold">1669</p><p class="text-[10px] opacity-60">เจ็บป่วยฉุกเฉิน</p></div><span>📞</span></a>
-                <a href="tel:1193" class="emergency-item p-3 rounded-xl flex justify-between items-center"><div><p class="text-sm font-bold">1193</p><p class="text-[10px] opacity-60">ตำรวจทางหลวง</p></div><span>📞</span></a>
-                <a href="tel:1543" class="emergency-item p-3 rounded-xl flex justify-between items-center"><div><p class="text-sm font-bold">1543</p><p class="text-[10px] opacity-60">รถเสียทางด่วน</p></div><span>📞</span></a>
-                <a href="tel:1146" class="emergency-item p-3 rounded-xl flex justify-between items-center"><div><p class="text-sm font-bold">1146</p><p class="text-[10px] opacity-60">ทางหลวงชนบท</p></div><span>📞</span></a>
-                <a href="tel:199" class="emergency-item p-3 rounded-xl flex justify-between items-center"><div><p class="text-sm font-bold">199</p><p class="text-[10px] opacity-60">กู้ภัย/ดับเพลิง</p></div><span>📞</span></a>
-            </div>
-        </section>
+<!-- MAIN SPLIT -->
+<main class="flex-1 grid grid-cols-10 gap-3">
 
-        <section class="col-span-4 dashboard-card flex flex-col">
-            <div class="p-4 border-b border-gray-800 bg-[#151515] flex justify-between items-center">
-                <h2 class="text-blue-400 font-bold text-sm tracking-widest uppercase">🐦 Traffic Twitter Feed</h2>
-                <span class="text-[9px] text-gray-600">JS100 RADIO</span>
-            </div>
-            <div class="flex-1 overflow-hidden">
-                <iframe id="twitter-frame" src="https://nitter.poast.org/js100radio" width="100%" height="100%" style="filter: invert(90%) hue-rotate(180deg) brightness(0.9);"></iframe>
-            </div>
-        </section>
-    </main>
+<!-- LEFT : RADAR -->
+<section class="col-span-6 card relative overflow-hidden">
+  <iframe id="radar"
+    loading="lazy"
+    width="100%" height="100%"
+    src="https://www.rainviewer.com/map.html?loc=13.75,100.52,8&oFa=0&oC=0&oU=0&oCS=1&oF=1&oAP=0&c=3&o=83">
+  </iframe>
+  <div class="absolute top-2 left-2 text-xs text-blue-400 font-bold">
+    🌧 Rain Radar (GPS-linked)
+  </div>
+</section>
 
-    <footer class="h-6 flex items-center px-4 text-[9px] text-gray-600 uppercase tracking-widest">
-        Auto-update mode: ON | Location: Bangkok, TH | Radar: Windy | Weather: OpenWeatherMap
-    </footer>
+<!-- RIGHT : TRAFFIC -->
+<section class="col-span-4 card flex flex-col">
+  <div class="p-3 border-b border-[color:var(--border)]">
+    <h2 class="text-sm font-bold tracking-widest uppercase text-blue-400">
+      🚨 Traffic Ahead
+    </h2>
+  </div>
 
-    <script>
-        const OWM_KEY = '291abd3340d40fa520f4240eb08313da';
-        const WAQI_TOKEN = '58ffca1bf9a4b7549d05e194a3b8d93c5b558e62';
-        const LAT = 13.7563; 
-        const LON = 100.5018;
+  <div id="alert-box" class="p-3 hidden bg-red-500/10 text-red-400 text-sm font-semibold">
+    🚨 อุบัติเหตุข้างหน้า โปรดใช้ความระมัดระวัง
+  </div>
 
-        function updateClock() {
-            const now = new Date();
-            const h = now.getHours().toString().padStart(2, '0');
-            const m = now.getMinutes().toString().padStart(2, '0');
-            const dayNames = ['วันอาทิตย์', 'วันจันทร์', 'วันอังคาร', 'วันพุธ', 'วันพฤหัสบดี', 'วันศุกร์', 'วันเสาร์'];
-            const monthNames = ['ม.ค.', 'ก.พ.', 'มี.ค.', 'เม.ย.', 'พ.ค.', 'มิ.ย.', 'ก.ค.', 'ส.ค.', 'ก.ย.', 'ต.ค.', 'พ.ย.', 'ธ.ค.'];
-            document.getElementById('clock').textContent = `${h}:${m}`;
-            document.getElementById('date').textContent = `${dayNames[now.getDay()]} ${now.getDate()} ${monthNames[now.getMonth()]}`;
-        }
+  <div id="traffic-feed" class="flex-1 overflow-y-auto p-3 space-y-3 text-sm"></div>
+</section>
 
-        async function fetchWeather() {
-            try {
-                // Fetch Current Weather
-                const res = await fetch(`https://api.openweathermap.org/data/2.5/weather?lat=${LAT}&lon=${LON}&appid=${OWM_KEY}&units=metric&lang=th`);
-                const data = await res.json();
-                if(data.main) {
-                    document.getElementById('temp-main').textContent = Math.round(data.main.temp) + '°';
-                    document.getElementById('weather-desc').textContent = data.weather[0].description;
-                }
+</main>
 
-                // Fetch Forecast
-                const resF = await fetch(`https://api.openweathermap.org/data/2.5/forecast?lat=${LAT}&lon=${LON}&appid=${OWM_KEY}&units=metric&lang=th`);
-                const dataF = await resF.json();
-                if(dataF.list) {
-                    const forecastRow = document.getElementById('forecast-row');
-                    forecastRow.innerHTML = '';
-                    dataF.list.slice(1, 5).forEach(item => {
-                        const time = new Date(item.dt * 1000).getHours() + ':00';
-                        const temp = Math.round(item.main.temp) + '°';
-                        forecastRow.innerHTML += `<div><p>${time}</p><p>🌡️</p><p>${temp}</p></div>`;
-                    });
-                }
-            } catch (e) { 
-                document.getElementById('weather-desc').textContent = "API Error: กรุณารันผ่าน HTTPS";
-            }
-        }
+<script>
+/* ⏰ CLOCK */
+function tick(){
+ const d=new Date();
+ clock.textContent=d.toLocaleTimeString('th-TH',{hour:'2-digit',minute:'2-digit'});
+}
+setInterval(tick,1000); tick();
 
-        async function fetchAQI() {
-            try {
-                const res = await fetch(`https://api.waqi.info/feed/geo:${LAT};${LON}/?token=${WAQI_TOKEN}`);
-                const data = await res.json();
-                if(data.data) {
-                    document.getElementById('pm25-val').textContent = data.data.aqi;
-                }
-            } catch (e) { console.error("AQI Error"); }
-        }
+/* 📍 GPS */
+let currentLat=13.7563,currentLon=100.5018;
+if(navigator.geolocation){
+ navigator.geolocation.watchPosition(pos=>{
+  currentLat=pos.coords.latitude;
+  currentLon=pos.coords.longitude;
+  loc.textContent=`GPS: ${currentLat.toFixed(3)}, ${currentLon.toFixed(3)}`;
 
-        // Initialize
-        updateClock();
-        fetchWeather();
-        fetchAQI();
-        setInterval(updateClock, 1000);
-        setInterval(fetchWeather, 600000); // 10 mins
-        setInterval(fetchAQI, 600000); // 10 mins
+  radar.src=`https://www.rainviewer.com/map.html?loc=${currentLat},${currentLon},9&oFa=0&oC=0&oU=0&oCS=1&oF=1&oAP=0&c=3&o=83`;
+ });
+}
 
-        // Auto-refresh Twitter Feed every 5 mins
-        setInterval(() => {
-            document.getElementById('twitter-frame').src = document.getElementById('twitter-frame').src;
-        }, 300000);
-    </script>
+/* 🔊 ALERT SOUND */
+let audioUnlocked=false;
+function beep(){
+ if(!audioUnlocked)return;
+ const ctx=new AudioContext();
+ const o=ctx.createOscillator();
+ o.frequency.value=880;
+ o.connect(ctx.destination);
+ o.start();
+ setTimeout(()=>o.stop(),150);
+}
+document.body.addEventListener('click',()=>audioUnlocked=true,{once:true});
+
+/* 🚨 TRAFFIC LOGIC */
+const dangerWords=['อุบัติเหตุ','ชน','คว่ำ','ปิดถนน','รถติด','น้ำท่วม','หลีกเลี่ยง'];
+let lastAlert='';
+
+async function loadTraffic(){
+ const feed=document.getElementById('traffic-feed');
+ const alertBox=document.getElementById('alert-box');
+ feed.innerHTML='';
+ const r=await fetch('https://api.rss2json.com/v1/api.json?rss_url=https://www.js100.com/rss/news');
+ const d=await r.json();
+
+ let alertFound=false;
+
+ d.items.slice(0,12).forEach(i=>{
+  const danger=dangerWords.some(w=>i.title.includes(w));
+  if(danger && i.title!==lastAlert){
+    alertFound=true;
+    lastAlert=i.title;
+  }
+  feed.innerHTML+=`
+   <div class="border-b border-[color:var(--border)] pb-2">
+     <p class="${danger?'text-red-400 font-semibold':''}">
+       ${danger?'🚨 ':''}${i.title}
+     </p>
+     <p class="text-[10px] text-[color:var(--muted)]">
+       ${new Date(i.pubDate).toLocaleTimeString('th-TH')}
+     </p>
+   </div>`;
+ });
+
+ if(alertFound){
+   alertBox.classList.remove('hidden');
+   beep();
+ } else {
+   alertBox.classList.add('hidden');
+ }
+}
+loadTraffic();
+setInterval(loadTraffic,300000);
+
+/* 📺 FULLSCREEN */
+setTimeout(()=>{
+ document.documentElement.requestFullscreen?.().catch(()=>{});
+},1000);
+</script>
+
 </body>
 </html>
